separate customers entity

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -26,5 +26,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Orders\Orders.csproj" />
+    <ProjectReference Include="..\Customers\Customers.csproj" />
   </ItemGroup>
 </Project>
