--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -25,7 +25,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Orders\Orders.csproj" />
-    <ProjectReference Include="..\Customers\Customers.csproj" />
+    <ProjectReference Include="..\Root\Root.csproj" />
   </ItemGroup>
 </Project>
