--- a/Server/Properties/launchSettings.json
+++ b/Server/Properties/launchSettings.json
@@ -15,7 +15,15 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Server": {
+    "Production": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
+    "Development": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
